@@ -85,9 +85,6 @@ apr_status_t h2_request_rcreate(h2_request **preq, apr_pool_t *pool,
     req->path        = path;
     req->headers     = apr_table_make(pool, 10);
     req->http_status = H2_HTTP_STATUS_UNSET;
-    if (r->server) {
-        req->serialize = h2_config_rgeti(r, H2_CONF_SER_HEADERS);
-    }
 
     x.pool = pool;
     x.headers = req->headers;
@@ -267,7 +264,7 @@ static request_rec *my_ap_create_request(conn_rec *c)
 }
 #endif
 
-request_rec *h2_request_create_rec(const h2_request *req, conn_rec *c)
+request_rec *h2_create_request_rec(const h2_request *req, conn_rec *c)
 {
     int access_status = HTTP_OK;    
 
